# stencil-stl-creator

./: pyproject.toml
stencil_creator/: img2stl_notebook.py
stencil_creator/stl_tools/: text2png.py
tests/: test_stencil_creator.py
