[tool.poetry]
name = "stencil-creator"
version = "0.1.0"
description = ""
authors = ["Alexander Jahn <jahn.alexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^4.12.0"
jupyter = "^1.0.0"
numpy-stl = "^2.12.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
pillow = "^8.0.1"
black = "^20.8b1"
rope = "^0.18.0"
opencv-python = "^4.4.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = true
